# Wordle-Information-theory

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.h  main.cpp  wordle.cpp  wordle.h
headers/: bot.h  wordle.h
src/: bot.cpp  main.cpp  wordle.cpp
